[project]
name = "aiva-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioodbc>=0.5.0",
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "langchain>=1.2.14",
    "langchain-core>=1.2.24",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.4",
    "openai-whisper>=20250625",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pydub>=0.25.1",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.42.0",
]
